# JM3D

JM3D-LLM/: README.md  pyproject.toml  vis_util.py
JM3D-LLM/llava/: constants.py  mm_utils.py
JM3D-LLM/llava/eval/: eval_objaverse.py  evaluator.py  run_llava_pc.py  run_llava_yk.py  traditional_evaluator.py
JM3D-LLM/llava/model/: __init__.py  builder.py  llava.py
JM3D-LLM/llava/model/multimodal_encoder/: builder.py
JM3D-LLM/llava/model/multimodal_encoder/pointbert/: PCDEncoder.py  dvae.py
JM3D-LLM/llava/model/multimodal_encoder/pointmlp/: pointMLP.py
JM3D-LLM/llava/train/: train.py  train_mem.py
JM3D-LLM/scripts/: chat.sh  eval.sh  pretrain_pc.sh  pretrain_pc_stage2.sh  pretrain_pc_stage3.sh  test_pretrain_pc.sh  yk_chat.sh
